CHANGELOG 14MAY23 v0.59:
> Added powershell command (pwsh)
> Fixed polymorphic issue on Linux builds
> Fixed memory leaks

CHANGELOG 2MAY23 v0.55:
> Revenant is now packaged with llvm-clang/llvm-mingw
> Reworked polymorphic functionality to support llvm
> Protection against Mandiant's FLOSS
> Implemented antidebug and runtime polymorphism prior to main()
> Bug fixes and codebase cleanup
> Implemented CHANGELOG