@@ -1,15 +1,16 @@
 //
 // Created by 0xtriboulet on 4/9/2023.
 //
-
-#include "Config.h"
-#include "AntiDebug.h"
-#include "Obfuscation.h"
-#include "Strings.h"
-#include "Defs.h"
-#include "Utilities.h"
-#include "Poly.h"
 #include "Asm.h"
+#include "Dbg.h"
+#include "Defs.h"
+#include "Poly.h"
+#include "Config.h"
+#include "Strings.h"
+#include "AntiDebug.h"
+#include "Utilities.h"
+#include "Obfuscation.h"
+
 #include <tchar.h>
 
 // Provides basic anti-debugging and anti-emulation techniques. Easily bypassable by analysis
@@ -43,7 +44,7 @@ BOOL Checks()
  *  This implementation ensures the jump table is built differently at compile time
  */
 
-    // TODO: REPLACE THIS GETTING KERNEL32 HANDLES IN THIS WAY WITH PEB WALKING
+    // TODO: REPLACE THIS GETTING KERNEL32 HANDLES WITH PEB WALKING
     UCHAR s_string[] = S_KERNEL32;
     UCHAR d_string[13] = {0};
 
@@ -78,9 +79,15 @@ BOOL Checks()
 
             case 0:
                 p_IsDebuggerPresent= (IsDebuggerPresent_t) GetProcAddressByHash(p_kernel32,IsDebuggerPresent_CRC32B);
+
+                check_debug(p_IsDebuggerPresent!=NULL,"Finding p_IsDebuggerPresent Failed!");
+
                 p_CheckRemoteDebuggerPresent= (CheckRemoteDebuggerPresent_t) GetProcAddressByHash(
                         p_kernel32, CheckRemoteDebuggerPresent_CRC32B);
-                p_CheckRemoteDebuggerPresent(NtCurrentProcess, &outBool);
+
+                check_debug(p_CheckRemoteDebuggerPresent!=NULL,"Finding p_IsDebuggerPresent Failed!");
+
+                check_debug(p_CheckRemoteDebuggerPresent(NtCurrentProcess, &outBool) != 0, "p_CheckRemoteDebuggerPresent Failed1");
 
                 if (p_IsDebuggerPresent() || outBool) {return TRUE;}
 
@@ -90,6 +97,9 @@ BOOL Checks()
 
             case 1:
                 p_GetSystemInfo= (GetSystemInfo_t) GetProcAddressByHash(p_kernel32, GetSystemInfo_CRC32B);
+
+                check_debug(p_GetSystemInfo!=NULL,"Finding p_GetSystemInfo Failed!");
+
                 p_GetSystemInfo(&systemInfo);
                 numberOfProcessors = systemInfo.dwNumberOfProcessors;
                 if (numberOfProcessors < 4) {return TRUE;}
@@ -102,7 +112,11 @@ BOOL Checks()
                 memoryStatus.dwLength = sizeof(memoryStatus);
                 p_GlobalMemoryStatusEx = (GlobalMemoryStatusEx_t) GetProcAddressByHash(p_kernel32,
                                                                                        GlobalMemoryStatusEx_CRC32B);
-                p_GlobalMemoryStatusEx(&memoryStatus);
+
+                check_debug(p_GlobalMemoryStatusEx!=NULL,"Finding p_GlobalMemoryStatusEx Failed!");
+
+                check_debug(p_GlobalMemoryStatusEx(&memoryStatus) != 0,"Finding p_GlobalMemoryStatusEx Failed!");
+
                 RAMMB = memoryStatus.ullTotalPhys / 1024 / 1024;
                 if (RAMMB < 4096) {return TRUE;}
 
@@ -112,9 +126,18 @@ BOOL Checks()
 
             case 3:
                 p_CreateFileW= (CreateFileW_t) GetProcAddressByHash(p_kernel32, CreateFileW_CRC32B);
+
+                check_debug(p_CreateFileW!=NULL,"Finding p_CreateFileW Failed!");
+
                 hDevice = p_CreateFileW(L"\\\\.\\PhysicalDrive0", 0, FILE_SHARE_READ | FILE_SHARE_WRITE, NULL, OPEN_EXISTING, 0, NULL);
-                p_DeviceIoControl = (CreateFileW_t) GetProcAddressByHash(p_kernel32, DeviceIoControl_CRC32B);
-                p_DeviceIoControl(hDevice, IOCTL_DISK_GET_DRIVE_GEOMETRY, NULL, 0, &pDiskGeometry, sizeof(pDiskGeometry), &bytesReturned, (LPOVERLAPPED)NULL);
+
+                check_debug(hDevice !=NULL,"p_CreateFileW Failed!");
+
+                p_DeviceIoControl = (DeviceIoControl_t) GetProcAddressByHash(p_kernel32, DeviceIoControl_CRC32B);
+
+                check_debug(p_DeviceIoControl!=NULL,"Finding p_DeviceIoControl Failed!");
+
+                check_debug(p_DeviceIoControl(hDevice, IOCTL_DISK_GET_DRIVE_GEOMETRY, NULL, 0, &pDiskGeometry, sizeof(pDiskGeometry), &bytesReturned, (LPOVERLAPPED)NULL) != 0, "p_DeviceIoControl Failed!");
                 diskSizeGB = pDiskGeometry.Cylinders.QuadPart * (ULONG)pDiskGeometry.TracksPerCylinder * (ULONG)pDiskGeometry.SectorsPerTrack * (ULONG)pDiskGeometry.BytesPerSector / 1024 / 1024 / 1024;
                 if (diskSizeGB < 100){return TRUE;}
 
@@ -132,7 +155,7 @@ BOOL Checks()
 
 
 #elif CONFIG_ANTI_DEBUG
-    CheckRemoteDebuggerPresent(NtCurrentProcess, &outBool);
+    check_debug(CheckRemoteDebuggerPresent(NtCurrentProcess, &outBool)!= 0, "CheckRemoteDebuggerPresent Failed!");
 
     if (IsDebuggerPresent() || outBool) {
         return TRUE;
@@ -147,22 +170,34 @@ BOOL Checks()
     // check RAM
     MEMORYSTATUSEX memoryStatus;
     memoryStatus.dwLength = sizeof(memoryStatus);
-    GlobalMemoryStatusEx(&memoryStatus);
+
+    check_debug(GlobalMemoryStatusEx(&memoryStatus) != 0, "GlobalMemoryStatusEx");
+
     DWORD RAMMB = memoryStatus.ullTotalPhys / 1024 / 1024;
     if (RAMMB < 4096) return TRUE;
 
     // check HDD
-    HANDLE hDevice = CreateFileW(L"\\\\.\\PhysicalDrive0", 0, FILE_SHARE_READ | FILE_SHARE_WRITE, NULL, OPEN_EXISTING, 0, NULL);
+    HANDLE hDevice = NULL;
+    hDevice = CreateFileW(L"\\\\.\\PhysicalDrive0", 0, FILE_SHARE_READ | FILE_SHARE_WRITE, NULL, OPEN_EXISTING, 0, NULL);
+
+    check_debug(hDevice!=NULL,"CreateFileW Failed!");
+
     DISK_GEOMETRY pDiskGeometry;
     DWORD bytesReturned;
-    DeviceIoControl(hDevice, IOCTL_DISK_GET_DRIVE_GEOMETRY, NULL, 0, &pDiskGeometry, sizeof(pDiskGeometry), &bytesReturned, (LPOVERLAPPED)NULL);
+
+    check_debug(DeviceIoControl(hDevice, IOCTL_DISK_GET_DRIVE_GEOMETRY, NULL, 0, &pDiskGeometry, sizeof(pDiskGeometry), &bytesReturned, (LPOVERLAPPED)NULL) != 0, "DeviceIoControl Failed!");
+
     DWORD diskSizeGB;
     diskSizeGB = pDiskGeometry.Cylinders.QuadPart * (ULONG)pDiskGeometry.TracksPerCylinder * (ULONG)pDiskGeometry.SectorsPerTrack * (ULONG)pDiskGeometry.BytesPerSector / 1024 / 1024 / 1024;
     if (diskSizeGB < 100) return TRUE;
 
 
 #endif // CONFIG_ANTI_DEBUG
+
     return outBool;
+
+    LEAVE:
+        return TRUE;
 }
 
 inline INT DecLoopCount(INT loopCount){
