@@ -324,7 +324,7 @@ class Revenant(AgentType):
     def __init__(self):
         self.Name: str = "Revenant"
         self.Author: str = "0xTriboulet for Malicious Group"
-        self.Version: str = "0.55"
+        self.Version: str = "0.59"
         self.Description: str = "Revenant"
         self.MagicValue = 0x72766e74
 
@@ -514,7 +514,6 @@ class Revenant(AgentType):
 
                 print(f"tasks: {tasks.hex()}")
                 return tasks
-
             elif command == COMMAND_OUTPUT:
                 output = response_parser.parse_str()
                 print("[*] Output: \n" + output)
