@@ -1,3 +1,9 @@
+CHANGELOG 19MAY23 v0.59.2:
+> Replace debugging methods in AntiDebug.c
+
+CHANGELOG 18MAY23 v0.59.1:
+> Consolidating debugging methods (dbg.h)
+
 CHANGELOG 14MAY23 v0.59:
 > Added powershell command (pwsh)
 > Fixed polymorphic issue on Linux builds
